refactor: :art: Backend cleaning, working tests and controllers correction